# bevy_map_editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
crates/bevy_map/: README.md
crates/bevy_map/src/: lib.rs
crates/bevy_map_animation/: Cargo.toml
crates/bevy_map_autotile/: Cargo.toml
crates/bevy_map_autotile/src/: lib.rs  wang.rs
crates/bevy_map_codegen/src/: lib.rs  scaffold.rs
crates/bevy_map_core/: Cargo.toml
crates/bevy_map_core/src/: entity.rs  entity_type_config.rs  layer.rs  level.rs  lib.rs  physics_layers.rs  tileset.rs
crates/bevy_map_derive/: Cargo.toml  README.md
crates/bevy_map_dialogue/: Cargo.toml
crates/bevy_map_editor/: Cargo.toml
crates/bevy_map_editor/src/: external_editor.rs  lib.rs
crates/bevy_map_editor/src/commands/: clipboard.rs
crates/bevy_map_runtime/: Cargo.toml  README.md
crates/bevy_map_runtime/src/: collision.rs  entity_input.rs  entity_physics.rs  entity_registry.rs  entity_sprite.rs  lib.rs  loader.rs
crates/bevy_map_schema/: Cargo.toml
crates/bevy_map_schema/src/: types.rs
docs/: devlog_script.md
examples/: Cargo.toml
examples/animation/: auto_demo.rs  manual_demo.rs  triggers_demo.rs
examples/assets/maps/: example_project.map.json  platformer_example.map.json
examples/collision/: demo.rs
examples/custom_editor/: main.rs
examples/custom_entities/: demo.rs
examples/dialogue/: auto_demo.rs
examples/platformer_example/: Cargo.toml  README.md
examples/platformer_example/assets/maps/: platformer_example.map.json
examples/platformer_example/src/: main.rs
examples/runtime_loader/: main.rs
examples/tileset/: demo.rs
(+18 files in other folders)
